--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,6 +5,7 @@ Version 8.1 (September 15, 2017)
    •Ice & Desert theme
    •Fixed rendering of vertical toolbars
    •Fixed mislabeled tooltips
+   •Fixed bug where some context menu items would crash the program
    •Fixed bug where CTRL+Click to add character to custom characters would insert it into document
 Version 8.0 (September 11, 2017)
    •Support for 4k screens
