--- a/Changelog.txt
+++ b/Changelog.txt
@@ -3,6 +3,7 @@ Version 8.1 (September 15, 2017)
    •Export dictionary to HTML
    •Multiple accents can be selected for a single character
    •Ice & Desert theme
+   •Find/Replace now matches theme
    •Fixed rendering of vertical toolbars
    •Fixed mislabeled tooltips
    •Fixed bug where some context menu items would crash the program
