--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ Version 8.1 (September 15, 2017)
    •Find/Replace now matches theme
    •Fixed rendering of vertical toolbars
    •Fixed mislabeled tooltips
+   •Fixed bug where dictionary wouldn't show up on when re-opening
    •Fixed bug where some context menu items would crash the program
    •Fixed bug where CTRL+Click to add character to custom characters would insert it into document
 Version 8.0 (September 11, 2017)
